xss fix and Markdown

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -97,6 +97,28 @@ h2
         border-top 0
         overflow hidden
         color #47ac39
+        p
+          margin 0
+        blockquote
+          padding 10px
+          margin-left -10px
+          border-left 1px solid #36642F
+          color #999
+          background #304030
+          width 380px
+        li
+          margin-left -20px
+        pre code
+          color #999
+          font-size 11px
+        pre
+          border-left 1px solid #111
+          background #2d2d2d
+          width 380px
+          margin-left -10px
+          padding 10px
+        pre:hover
+          overflow-x scroll
     .you
       .user
         background #222
