--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -129,6 +129,40 @@ h2 {
   overflow: hidden;
   color: #47ac39;
 }
+#body .content .post .post-post p,
+#footer .content .post .post-post p {
+  margin: 0;
+}
+#body .content .post .post-post blockquote,
+#footer .content .post .post-post blockquote {
+  padding: 10px;
+  margin-left: -10px;
+  border-left: 1px solid #36642f;
+  color: #999;
+  background: #304030;
+  width: 380px;
+}
+#body .content .post .post-post li,
+#footer .content .post .post-post li {
+  margin-left: -20px;
+}
+#body .content .post .post-post pre code,
+#footer .content .post .post-post pre code {
+  color: #999;
+  font-size: 11px;
+}
+#body .content .post .post-post pre,
+#footer .content .post .post-post pre {
+  border-left: 1px solid #111;
+  background: #2d2d2d;
+  width: 380px;
+  margin-left: -10px;
+  padding: 10px;
+}
+#body .content .post .post-post pre:hover,
+#footer .content .post .post-post pre:hover {
+  overflow-x: scroll;
+}
 #body .content .you .user,
 #footer .content .you .user {
   background: #222;
