User name on fields, XSS amateur fixes, page title count fixed and backend optimization

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ h2 CREATE
 form#create(action="/new", method="post")
   b User Name
   br
-  input(type="textbox", name="user_name")
+  input(type="textbox", name="user_name", value=user.name)
   br
   br
   b talk.nodester.com/
