--- a/views/join.jade
+++ b/views/join.jade
@@ -10,7 +10,7 @@ form#join(action="/join", method="post")
   br
   b User Name
   br
-  input(type="textbox", name="user_name")
+  input(type="textbox", name="user_name", value= user.name)
   br
   br
   input(type="submit", value="Join")
